add_subdirectory(add)
add_subdirectory(calloc)
add_subdirectory(fib)
add_subdirectory(global)
add_subdirectory(gpio)
add_subdirectory(hwlock)
add_subdirectory(interrupt)
add_subdirectory(interrupt-delay)
add_subdirectory(lbu)
add_subdirectory(malloc)
add_subdirectory(realloc)
add_subdirectory(sections)
add_subdirectory(syscall)
add_subdirectory(time)
add_subdirectory(wb_uart)
