add_subdirectory(add)
add_subdirectory(cond)
#add_subdirectory(heap)
#add_subdirectory(interrupt)
add_subdirectory(lockowner)
add_subdirectory(printf)
#add_subdirectory(stack)
add_subdirectory(swlock)
add_subdirectory(syscall)
add_subdirectory(threadcancel)
add_subdirectory(threadprint)
#add_subdirectory(uart)
